@@ -1,3 +1,8 @@
+2012-08-21  David S. Miller  <davem@davemloft.net>
+
+	* sparc-opc.c (4-argument crypto instructions): Fix encoding using
+	F3F4 macro.
+
 2012-08-20  Edmar Wienskoski  <edmar@freescale.com>
 
 	* ppc-opc.c (powerpc_opcodes): Changed opcode for vabsdub,
